variables.RunFour.scala.error
Erreur de compilation :
RunFour:2: error: identifier expected but 'while' found.
while (nbBis<4){
^