variables.RunFour.scala.code
var nbBis = 0:
while (nbBis<4){
  avance()
  if (estSurBiscuit()){
    nbBis = nbBis + 1
  }
}